--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lucide@0.248.0/dist/lucide.min.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
