Descripción breve de los cambiEDE

--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
         </main>
 
         <!-- NAV BAR -->
-        <nav class="bg-white absolute bottom-0 left-0 right-0 h-16 flex justify-around items-center z-40" style="border-top:1px solid #f1f3f7;box-shadow:0 -2px 12px rgba(0,0,0,0.05)">
+    <nav class="bg-white h-16 flex justify-around items-center z-40"
+     style="border-top:1px solid #f1f3f7;box-shadow:0 -2px 12px rgba(0,0,0,0.05)">
             <button onclick="switchView('home', this)" class="nav-btn flex flex-col items-center gap-1 p-3 text-slate-400 transition-all nav-active">
                 <i data-lucide="home" class="w-5 h-5"></i>
             </button>
